--- a/robot_description/CMakeLists.txt
+++ b/robot_description/CMakeLists.txt
@@ -11,6 +11,7 @@ find_package(rclcpp REQUIRED)
 find_package(sensor_msgs REQUIRED)
 find_package(nav_msgs REQUIRED)
 find_package(geometry_msgs REQUIRED)
+find_package(std_msgs REQUIRED)
 find_package(std_srvs REQUIRED)
 find_package(tf2 REQUIRED)
 find_package(Eigen3 REQUIRED)
@@ -21,8 +22,11 @@ add_executable(frame_id_converter_node scripts/frame_id_converter.cpp)
 ament_target_dependencies(frame_id_converter_node rclcpp sensor_msgs)
 
 add_executable(motor_command_node scripts/motor_command.cpp)
-ament_target_dependencies(motor_command_node rclcpp std_msgs)
-
+ament_target_dependencies(motor_command_node
+  rclcpp
+  geometry_msgs
+  std_msgs
+)
 add_executable(ekf_diff_imu_node scripts/ekf_diff_imu.cpp)
 target_include_directories(ekf_diff_imu_node PRIVATE ${EIGEN3_INCLUDE_DIRS})
 ament_target_dependencies(ekf_diff_imu_node
@@ -46,6 +50,11 @@ install(
     ekf_diff_imu_node
     motor_command_node
     DESTINATION lib/${PROJECT_NAME}
+)
+
+install(TARGETS
+  motor_command_node
+  DESTINATION lib/${PROJECT_NAME}
 )
 
 if(BUILD_TESTING)
